--- a/Library-application/pom.xml
+++ b/Library-application/pom.xml
@@ -46,10 +46,12 @@
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-spring</artifactId>
         </dependency>
-
-
-
-
+        <dependency>
+            <groupId>fr.training.spring</groupId>
+            <artifactId>Library</artifactId>
+            <version>0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
